--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "react-slick": "^0.30.3",
     "react-spinners": "^0.17.0",
     "react-tooltip": "^5.28.1",
+    "recharts": "^3.1.2",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.22.2",
     "swiper": "^11.2.6",
