--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "b11a12-client-side-khokan-main",
+  "name": "study-hub",
   "private": true,
   "version": "0.0.0",
   "type": "module",
